crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__drop_reasoning_details__tests__drop_reasoning_details_mixed_message_types.snap
---
source: crates/forge_domain/src/transformer/drop_reasoning_details.rs
expression: snapshot
---
transformation: DropReasoningDetails_mixed_messages
before:
  messages:
    - id: "[id]"
      text:
        role: System
        content: System message
    - id: "[id]"
      text:
        role: User
        content: User message with reasoning
        reasoning_details:
          - text: Complex reasoning process
            signature: ~
            data: ~
            id: "[id]"
            format: ~
            index: ~
            type_of: ~
    - id: "[id]"
      text:
        role: User
        content: User message without reasoning
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant response
    - id: "[id]"
      tool:
        name: test_tool
        call_id: call_123
        output:
          is_error: false
          values:
            - text: Tool result
after:
  messages:
    - id: "[id]"
      text:
        role: System
        content: System message
    - id: "[id]"
      text:
        role: User
        content: User message with reasoning
    - id: "[id]"
      text:
        role: User
        content: User message without reasoning
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant response
    - id: "[id]"
      tool:
        name: test_tool
        call_id: call_123
        output:
          is_error: false
          values:
            - text: Tool result
