crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__drop_reasoning_details__tests__drop_reasoning_details_preserves_non_text_messages.snap
---
source: crates/forge_domain/src/transformer/drop_reasoning_details.rs
expression: snapshot
---
transformation: DropReasoningDetails_preserve_non_text
before:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User with reasoning
        reasoning_details:
          - text: User reasoning
            signature: ~
            data: ~
            id: "[id]"
            format: ~
            index: ~
            type_of: ~
    - id: "[id]"
      image:
        url: "data:image/png;base64,image_data"
        mime_type: image/png
    - id: "[id]"
      tool:
        name: preserve_tool
        call_id: call_preserve
        output:
          is_error: false
          values:
            - text: Tool output
  reasoning:
    enabled: true
after:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User with reasoning
    - id: "[id]"
      image:
        url: "data:image/png;base64,image_data"
        mime_type: image/png
    - id: "[id]"
      tool:
        name: preserve_tool
        call_id: call_preserve
        output:
          is_error: false
          values:
            - text: Tool output
