crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__drop_reasoning_details__tests__drop_reasoning_details_preserves_other_fields.snap
---
source: crates/forge_domain/src/transformer/drop_reasoning_details.rs
expression: snapshot
---
transformation: DropReasoningDetails_preserve_fields
before:
  messages:
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant message
        model: gpt-4
        reasoning_details:
          - text: Important reasoning
            signature: ~
            data: ~
            id: "[id]"
            format: ~
            index: ~
            type_of: ~
after:
  messages:
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant message
        model: gpt-4
