crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__drop_reasoning_details__tests__drop_reasoning_details_removes_reasoning.snap
---
source: crates/forge_domain/src/transformer/drop_reasoning_details.rs
expression: snapshot
---
transformation: DropReasoningDetails
before:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User message with reasoning
        reasoning_details:
          - text: I need to think about this
            signature: ~
            data: ~
            id: "[id]"
            format: ~
            index: ~
            type_of: ~
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant response with reasoning
        reasoning_details:
          - text: I need to think about this
            signature: ~
            data: ~
            id: "[id]"
            format: ~
            index: ~
            type_of: ~
after:
  messages:
    - id: "[id]"
      text:
        role: User
        content: User message with reasoning
    - id: "[id]"
      text:
        role: Assistant
        content: Assistant response with reasoning
